test/fail/type-alias-path/m2.mo
module {
  public type MyType = { x : Text };
  public func m() : MyType = { x = "hello" };
};
